--- a/OpenGoogleChrome/.project
+++ b/OpenGoogleChrome/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>OpenGoogleChrome</name>
+	<name>CNX_UATSuites</name>
 	<comment></comment>
 	<projects>
 	</projects>
